graph_asset_inventory_api: implement assets' bulk insert endpoint
